Vld 28 (#37)
* move ProjectTestScheduler to  services/impl package

* VLD-28 modify the data type of the body, actual and expected responses

* VLD-23 display validation result

* update project controller

* VLD-28 handle httpStatus